--- a/Essence.Presentation/Views/Home/Index.cshtml
+++ b/Essence.Presentation/Views/Home/Index.cshtml
@@ -99,36 +99,48 @@
     <!-- ##### Welcome Area End ##### -->
 
     <!-- ##### Top Catagory Area Start ##### -->
-    <div class="top_catagory_area section-padding-80 clearfix">
-        <div class="container">
-            <div class="row justify-content-center">
-                <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
+<div class="top_catagory_area section-padding-80 clearfix">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="owl-carousel category-slider">
+                    <!-- Single Catagory -->
                     <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-2.jpg);">
                         <div class="catagory-content">
                             <a href="#">Clothing</a>
                         </div>
                     </div>
-                </div>
-                <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
+                    <!-- Single Catagory -->
                     <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-3.jpg);">
                         <div class="catagory-content">
                             <a href="#">Shoes</a>
                         </div>
                     </div>
-                </div>
-                <!-- Single Catagory -->
-                <div class="col-12 col-sm-6 col-md-4">
+                    <!-- Single Catagory -->
                     <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-4.jpg);">
                         <div class="catagory-content">
                             <a href="#">Accessories</a>
                         </div>
                     </div>
+                    <!-- Single Catagory -->
+                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-4.jpg);">
+                        <div class="catagory-content">
+                            <a href="#">Rizvan</a>
+                        </div>
+                    </div>
+                    <!-- Single Catagory -->
+                    <div class="single_catagory_area d-flex align-items-center justify-content-center bg-img" style="background-image: url(img/bg-img/bg-4.jpg);">
+                        <div class="catagory-content">
+                            <a href="#">Aqil</a>
+                        </div>
+                    </div>
+                    <!-- Daha çox kateqoriyalar -->
                 </div>
             </div>
         </div>
     </div>
+</div>
+
     <!-- ##### Top Catagory Area End ##### -->
 
     <!-- ##### CTA Area Start ##### -->
@@ -334,4 +346,13 @@
         </div>
     </div>
     <!-- ##### Brands Area End ##### -->
+<!-- Owl Carousel CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
 
+<!-- Owl Carousel JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script>
+   
+</script>
