--- a/Essence.Presentation/wwwroot/css/owl.carousel.css
+++ b/Essence.Presentation/wwwroot/css/owl.carousel.css
@@ -1,4 +1,4 @@
-/* 
+﻿/* 
  *  Owl Carousel - Animate Plugin
  */
 .owl-carousel .animated {
@@ -214,3 +214,44 @@
   position: relative;
   z-index: 1;
 }
+
+
+
+
+.category-section {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+}
+
+.category-item {
+    position: relative;
+    width: 30%;
+    overflow: hidden;
+    border: 1px solid #e0e0e0;
+    transition: transform 0.3s ease;
+}
+
+    .category-item img {
+        width: 100%;
+        height: auto;
+        display: block;
+        transition: transform 0.3s ease;
+    }
+
+    .category-item:hover img {
+        transform: scale(1.1);
+    }
+
+.category-title {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px 20px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
