--- a/Essence.Presentation/Areas/Admin/Views/Product/Create.cshtml
+++ b/Essence.Presentation/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Essence.Business.Dtos.BrandDtos
+
 <div class="container mt-5">
     <h2 class="text-center mb-4">Create New Product</h2>
     <form asp-action="Create" asp-controller="Product" method="post" enctype="multipart/form-data">
@@ -8,10 +9,17 @@
             <input type="text" class="form-control" id="Name" name="Name" placeholder="Enter product name" required />
         </div>
 
-        <div class="form-group mb-3">
-            <label for="Brand">Brand</label>
-            <input type="text" class="form-control" id="Brand" name="Brand" placeholder="Enter brand name" required />
-        </div>
+        <select class="form-control" id="BrandId" name="BrandId" required>
+            <option value="" disabled selected>Select a brand</option>
+            @if (ViewData["Brands"] != null)
+            {
+                var brands = (List<BrandGetDto>)ViewData["Brands"];
+                foreach (var brand in brands)
+                {
+                    <option value="@brand.Id">@brand.Name</option>
+                }
+            }
+        </select>
 
         <div class="form-group mb-3">
             <label for="Description">Description</label>
