--- a/Essence.Presentation/Views/Home/ProductView.cshtml
+++ b/Essence.Presentation/Views/Home/ProductView.cshtml
@@ -284,7 +284,10 @@
                                         <div class="hover-content">
                                             <!-- Add to Cart -->
                                             <div class="add-to-cart-btn">
-                                                <a href="#" class="btn essence-btn">Add to Cart</a>
+                                                <div class="add-to-cart-btn">
+                                                    <a href="javascript:void(0);" class="btn essence-btn" onclick="addToCart(@product.Id)">Add to Cart</a>
+                                                </div>
+
                                             </div>
                                         </div>
                                     </div>
