--- a/Essence.Presentation/Views/Home/Index.cshtml
+++ b/Essence.Presentation/Views/Home/Index.cshtml
@@ -1,106 +1,27 @@
 ﻿@using Essence.Business.Dtos.ProductDtos
+@using Essence.Business.Services.Abstractions
 @{
+
     ViewData["Title"] = "Home Page";
 }
 @model List<ProductGetDto>
- <!-- ##### Right Side Cart Area ##### -->
-    <div class="cart-bg-overlay"></div>
 
-    <div class="right-side-cart-area">
-
-        <!-- Cart Button -->
-        <div class="cart-button">
-            <a href="#" id="rightSideCart"><img src="~/img/core-img/bag.svg" alt=""> <span>3</span></a>
-        </div>
-
-        <div class="cart-content d-flex">
-
-            <!-- Cart List Area -->
-            <div class="cart-list">
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="~/img/product-img/product-1.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                            <span class="badge">Mango</span>
-                            <h6>Button Through Strap Mini Dress</h6>
-                            <p class="size">Size: S</p>
-                            <p class="color">Color: Red</p>
-                            <p class="price">$45.00</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="~/img/product-img/product-2.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                            <span class="badge">Mango</span>
-                            <h6>Button Through Strap Mini Dress</h6>
-                            <p class="size">Size: S</p>
-                            <p class="color">Color: Red</p>
-                            <p class="price">$45.00</p>
-                        </div>
-                    </a>
-                </div>
-
-                <!-- Single Cart Item -->
-                <div class="single-cart-item">
-                    <a href="#" class="product-image">
-                        <img src="~/img/product-img/product-3.jpg" class="cart-thumb" alt="">
-                        <!-- Cart Item Desc -->
-                        <div class="cart-item-desc">
-                          <span class="product-remove"><i class="fa fa-close" aria-hidden="true"></i></span>
-                            <span class="badge">Mango</span>
-                            <h6>Button Through Strap Mini Dress</h6>
-                            <p class="size">Size: S</p>
-                            <p class="color">Color: Red</p>
-                            <p class="price">$45.00</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- Cart Summary -->
-            <div class="cart-amount-summary">
-
-                <h2>Summary</h2>
-                <ul class="summary-table">
-                    <li><span>subtotal:</span> <span>$274.00</span></li>
-                    <li><span>delivery:</span> <span>Free</span></li>
-                    <li><span>discount:</span> <span>-15%</span></li>
-                    <li><span>total:</span> <span>$232.00</span></li>
-                </ul>
-                <div class="checkout-btn mt-100">
-                    <a href="checkout.html" class="btn essence-btn">check out</a>
+<!-- ##### Welcome Area Start ##### -->
+<section class="welcome_area bg-img background-overlay" style="background-image: url(img/bg-img/bg-1.jpg);">
+    <div class="container h-100">
+        <div class="row h-100 align-items-center">
+            <div class="col-12">
+                <div class="hero-content">
+                    <h6>asoss</h6>
+                    <h2>New Collection</h2>
+                    <a asp-action="ProductView" class="btn essence-btn">view collection</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- ##### Right Side Cart End ##### -->
-
-    <!-- ##### Welcome Area Start ##### -->
-    <section class="welcome_area bg-img background-overlay" style="background-image: url(img/bg-img/bg-1.jpg);">
-        <div class="container h-100">
-            <div class="row h-100 align-items-center">
-                <div class="col-12">
-                    <div class="hero-content">
-                        <h6>asoss</h6>
-                        <h2>New Collection</h2>
-                        <a asp-action="ProductView" class="btn essence-btn">view collection</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ##### Welcome Area End ##### -->
-
-    <!-- ##### Top Catagory Area Start ##### -->
+</section>
+<!-- ##### Welcome Area End ##### -->
+<!-- ##### Top Catagory Area Start ##### -->
 <div class="top_catagory_area section-padding-80 clearfix">
     <div class="container">
         <div class="row">
@@ -143,46 +64,44 @@
     </div>
 </div>
 
-    <!-- ##### Top Catagory Area End ##### -->
-
-    <!-- ##### CTA Area Start ##### -->
-    <div class="cta-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="cta-content bg-img background-overlay" style="background-image: url(img/bg-img/bg-5.jpg);">
-                        <div class="h-100 d-flex align-items-center justify-content-end">
-                            <div class="cta--text">
-                                <h6>-60%</h6>
-                                <h2>Global Sale</h2>
-                                <a href="#" class="btn essence-btn">Buy Now</a>
-                            </div>
+<!-- ##### Top Catagory Area End ##### -->
+<!-- ##### CTA Area Start ##### -->
+<div class="cta-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="cta-content bg-img background-overlay" style="background-image: url(img/bg-img/bg-5.jpg);">
+                    <div class="h-100 d-flex align-items-center justify-content-end">
+                        <div class="cta--text">
+                            <h6>-60%</h6>
+                            <h2>Global Sale</h2>
+                            <a href="#" class="btn essence-btn">Buy Now</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- ##### CTA Area End ##### -->
-
-    <!-- ##### New Arrivals Area Start ##### -->
-    <section class="new_arrivals_area section-padding-80 clearfix">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center">
-                        <h2>Popular Products</h2>
-                    </div>
+</div>
+<!-- ##### CTA Area End ##### -->
+<!-- ##### New Arrivals Area Start ##### -->
+<section class="new_arrivals_area section-padding-80 clearfix">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="section-heading text-center">
+                    <h2>Popular Products</h2>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="popular-products-slides owl-carousel">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="popular-products-slides owl-carousel">
 
-                        @foreach (var item in Model)
+                    @foreach (var item in Model)
                     {
                         <div class="single-product-wrapper">
                             <div class="product-img">
@@ -204,47 +123,48 @@
                                 <div class="hover-content">
                                     <!-- Add to Cart -->
                                     <div class="add-to-cart-btn">
-                                        <a href="#" class="btn essence-btn">Add to Cart</a>
+                                        <a asp-controller="Basket" asp-action="AddToBasket" asp-route-id="@item.Id" class="btn essence-btn addToBasketBtn">Add to Cart</a>
+
                                     </div>
+
                                 </div>
                             </div>
                         </div>
                     }
-                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- ##### New Arrivals Area End ##### -->
-
-    <!-- ##### Brands Area Start ##### -->
-    <div class="brands-area d-flex align-items-center justify-content-between">
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand1.png" alt="">
-        </div>
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand2.png" alt="">
-        </div>
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand3.png" alt="">
-        </div>
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand4.png" alt="">
-        </div>
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand5.png" alt="">
-        </div>
-        <!-- Brand Logo -->
-        <div class="single-brands-logo">
-            <img src="~/img/core-img/brand6.png" alt="">
-        </div>
     </div>
-    <!-- ##### Brands Area End ##### -->
+</section>
+<!-- ##### New Arrivals Area End ##### -->
+<!-- ##### Brands Area Start ##### -->
+<div class="brands-area d-flex align-items-center justify-content-between">
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand1.png" alt="">
+    </div>
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand2.png" alt="">
+    </div>
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand3.png" alt="">
+    </div>
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand4.png" alt="">
+    </div>
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand5.png" alt="">
+    </div>
+    <!-- Brand Logo -->
+    <div class="single-brands-logo">
+        <img src="~/img/core-img/brand6.png" alt="">
+    </div>
+</div>
+<!-- ##### Brands Area End ##### -->
 <!-- Owl Carousel CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
@@ -252,6 +172,23 @@
 <!-- Owl Carousel JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-<script>
-   
-</script>
+@section Scripts {
+    <script>
+                const addToBasketBtns=document.querySelectorAll(".addToBasketBtn");
+          const basketModalArea=document.querySelector(".basketModal");
+
+
+          console.log(addToBasketBtns)
+          console.log(basketModalArea)
+          addToBasketBtns.forEach(btn=>{
+        btn.addEventListener('click',async (e)=>{
+                  e.preventDefault();
+
+                  const response=await fetch(btn.href);
+                  const basketModal=await response.text();
+
+                  basketModalArea.innerHTML=basketModal;
+              })
+          })
+    </script>
+}
