--- a/Essence.Presentation/Areas/Admin/Views/Category/Index.cshtml
+++ b/Essence.Presentation/Areas/Admin/Views/Category/Index.cshtml
@@ -54,10 +54,14 @@
                                 }
                             </td>
                             <td>
-                                <a class="btn btn-primary btn-sm" asp-controller="Product" asp-action="Details" asp-route-id="@category.Id">Details</a>
-                                <a class="btn btn-warning btn-sm" asp-controller="Product" asp-action="Update" asp-route-id="@category.Id">Update</a>
-                                <a class="btn btn-danger btn-sm" asp-controller="Product" asp-action="Delete" asp-route-id="@category.Id"
-                                   onclick="return confirm('Are you sure you want to delete this product?');">Delete</a>
+                                <a class="btn btn-primary btn-sm" asp-controller="Category" asp-action="Details" asp-route-id="@category.Id">Details</a>
+                                <a class="btn btn-warning btn-sm" asp-controller="Category" asp-action="Update" asp-route-id="@category.Id">Update</a>
+                                <form asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" method="post" style="display: inline;">
+                                    @Html.AntiForgeryToken()
+                                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this category?');">Delete</button>
+                                </form>
+
+
                             </td>
                         </tr>
                     }
