--- a/Essence.Presentation/Areas/Admin/Views/Product/Index.cshtml
+++ b/Essence.Presentation/Areas/Admin/Views/Product/Index.cshtml
@@ -31,15 +31,26 @@
                                      class="img-thumbnail"
                                      style="max-width: 100px; max-height: 100px;" />
                             </td>
-                            <td>@product.Brand.Name</td>
+                            <td>@product.BrandName</td>
                             <td>@product.Name</td>
-                            <td>@product.Category.Name</td>
-                            <td>@product.Price</td>
+                            <td>
+                                @if (string.IsNullOrWhiteSpace(product.CategoryName))
+                                {
+                                    <span>No Category</span>
+                                }
+                                else
+                                {
+                                    <span>@product.CategoryName</span>
+                                }
+                            </td>
+                            <td>@product.Price AZN</td>
                             <td>
                                 <a class="btn btn-primary btn-sm" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id">Details</a>
                                 <a class="btn btn-warning btn-sm" asp-controller="Product" asp-action="Update" asp-route-id="@product.Id">Update</a>
-                                <a class="btn btn-danger btn-sm" asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id"
-                                   onclick="return confirm('Are you sure you want to delete this product?');">Delete</a>
+                                <form asp-controller="Product" asp-action="Delete" asp-route-id="@product.Id" method="post" style="display:inline;">
+                                    @Html.AntiForgeryToken()
+                                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this product?');">Delete</button>
+                                </form>
                             </td>
                         </tr>
                     }
